--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,15 @@ __pycache__
 /venv
 /app/venv
 
+.env
+
+
+minikube-linux-amd64
+
+/terraform/.terraform/
+.terraform/.lock.hcl
+terraform.tfstate
+terraform.tfstate.backup
+
+
+
