--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   llmodel:
     image: ollama/ollama:latest
@@ -28,7 +26,7 @@ services:
   app:
     build:
       context: ./app
-      dockerfile: Dockerfile
+      dockerfile: streamlit.dockerfile
     container_name: app-container
     ports:
       - "8501:8501"
