--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v2
         with:
-          credentials_json: ${{ secrets.GCP_SAKEY }}
+          credentials_json: ${{ secrets.GCPSAKEY }}
 
       - name: Set up Google Cloud CLI
         uses: google-github-actions/setup-gcloud@v2
