--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,62 +1,56 @@
-name: Deploy to Cloud Run
+name: Build and Deploy to Cloud Run
 
 on:
   push:
-    branches: [main]
+    branches: [ main ]
+
+env:
+  PROJECT_ID: tom-riddle-diary1
+  SERVICE_NAME: my-app-with-sidecar
+  REGION: us-central1
 
 jobs:
-  deploy:
+  setup-build-publish-deploy:
+    name: Setup, Build, Publish, and Deploy
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+    - name: Checkout
+      uses: actions/checkout@v3
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+    # Setup gcloud CLI
+    - name: Set up Cloud SDK
+      uses: google-github-actions/setup-gcloud@v1
+      with:
+        project_id: tom-riddle-diary1
+        service_account_key: my-app-with-sidecar
+        export_default_credentials: true
 
-      - name: Authenticate to Google Cloud
-        uses: google-github-actions/auth@v2
-        with:
-          credentials_json: ${{ secrets.GCPSAKEY }}
+    # Login to GCR
+    - name: Authenticate to Google Cloud Registry
+      run: gcloud auth configure-docker
 
-      - name: Set up Google Cloud CLI
-        uses: google-github-actions/setup-gcloud@v2
-        with:
-          project_id: tom-riddle-diary1
+    # Build and push main app
+    - name: Build and Push Main App
+      working-directory: ./app
+      run: |
+        # docker build -t gcr.io/$PROJECT_ID/main-app:latest .
+        # docker push gcr.io/$PROJECT_ID/main-app:latest
+        docker build -t us-central1-docker.pkg.dev/tom-riddle-diary1/repo/streamlit:latest -f streamlit.dockerfile .
+        docker push us-central1-docker.pkg.dev/tom-riddle-diary1/repo/streamlit:latest
 
-      - name: Configure Docker for Artifact Registry
-        run: gcloud auth configure-docker us-central1-docker.pkg.dev --quiet
+    # Build and push sidecar
+    # - name: Build and Push Sidecar
+    #   working-directory: ./sidecar
+    #   run: |
+    #     docker build -t gcr.io/$PROJECT_ID/sidecar:latest .
+    #     docker push gcr.io/$PROJECT_ID/sidecar:latest
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: ./app
-          file: ./app/streamlit.dockerfile
-          push: true
-          tags: us-central1-docker.pkg.dev/tom-riddle-diary1/streamlit-ollama-repo/streamlit:latest
+    # Deploy to Cloud Run
+    - name: Deploy to Cloud Run
+      run: |
+        gcloud run services replace service.yaml \
+          --region=$REGION \
+          --project=tom-riddle-diary1
 
-      - name: Deploy to Cloud Run
-        run: |
-          gcloud run deploy streamlit-ollama-service2 \
-            --region us-central1 \
-            --image us-central1-docker.pkg.dev/tom-riddle-diary1/streamlit-ollama-repo/streamlit:latest \
-            --add-sidecar ollama/ollama:latest \
-            --sidecar-name ollama-container \
-            --sidecar-port 11434 \
-            --sidecar-env "PORT=11434" \
-            --sidecar-command "/bin/sh" \
-            --sidecar-args "-c,ollama serve & sleep 5 && ollama pull phi3 && wait" \
-            --sidecar-cpu 4 \
-            --sidecar-memory 8Gi \
-            --port 8501 \
-            --env "OLLAMA_HOST=http://localhost:11434" \
-            --cpu 2 \
-            --memory 4Gi \
-            --min-instances 1 \
-            --max-instances 10 \
-            --concurrency 80 \
-            --timeout 3600s \
-            --allow-unauthenticated \
-            --service-account streamlit-ollama-service2-sa@tom-riddle-diary1.iam.gserviceaccount.com \
-            --project tom-riddle-diary1
+          
