--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -18,7 +18,14 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
-    # Setup gcloud CLI
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
+    - name: Authenticate to Google Cloud
+      uses: google-github-actions/auth@v2
+      with:
+        credentials_json: ${{ secrets.GCPSAKEY }}
+
     - name: Set up Cloud SDK
       uses: google-github-actions/setup-gcloud@v1
       with:
@@ -26,11 +33,9 @@ jobs:
         service_account_key: my-app-with-sidecar
         export_default_credentials: true
 
-    # Login to GCR
     - name: Authenticate to Google Cloud Registry
       run: gcloud auth configure-docker
 
-    # Build and push main app
     - name: Build and Push Main App
       working-directory: ./app
       run: |
@@ -53,4 +58,3 @@ jobs:
           --region=$REGION \
           --project=tom-riddle-diary1
 
-          
